[FIX] s3 이미지/파일 삭제 오류 수정